# deepc

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  demo.c
include/deepc/: Activation.hpp  DenseLayer.hpp  DenseNetwork.hpp  FloatGenerator.hpp  Layer.hpp  Matrix.hpp  UniformXavier.hpp  Vector.hpp  ZeroGenerator.hpp  activations.h  data_processing.h  debug.h  deepc.h  deepc.hpp  error.h  float.h  float.hpp  layer.h  layers.h  losses.h  matrix.h  models.h  optimizers.h  vector.h
include/deepc/differential/: activations.hpp
include/deepc/neural/: fully_conn_layer.hpp  layer.hpp
include/deepc/random/: number_generator.hpp  uniform_xavier.hpp
src/: Activation.cpp  CMakeLists.txt  DenseLayer.cpp  DenseNetwork.cpp  Layer.cpp  Matrix.cpp  Network.cpp  UniformXavier.cpp  Vector.cpp  activations.c  data_processing.c  error.c  float.c  layer.c  matrix.c  vector.c
src/differential/: activations.cpp
src/neural/: fully_conn_layer.cpp  network.cpp
test/: CMakeLists.txt  TestDenseLayer.cpp  float.c  matrix.c  test_activations.cpp  test_float.cpp  test_layer.cpp  test_neural_fully_conn_layer.cpp  vector.c
